--- a/.env.example
+++ b/.env.example
@@ -5,9 +5,21 @@ DB_PORT = "3306"
 DB_PASS = ""
 DB_NAME = "your_db_name"
 
+
 # Bot
 BOT_TOKEN = "YOUR BOT TOKEN HERE"
 BOT_ID    = "BOT ID"
 BOT_USER  = "BOT USERNAME"
 BOT_USERNAME = "${BOT_USER}" # Alias of BOT_USER
-BOT_CHANNEL  = "CHANNEL LOG"
+BOT_CHANNEL  = "CHANNEL LOG ID"
+
+# Server config
+CHANNEL_LOG = "" 
+ADMIN       = "" # Your telegram id
+MAX_EXECUTION_TIME = 58
+TIME_ZONE          = "America/Lima"
+
+
+# Apis token
+IP1_TOKEN = "" # See https://docs.ipdata.co/
+IP2_TOKEN = "" # See https://ipinfo.io/developers
