--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,4 @@ TIME_ZONE          = "America/Lima"
 # Apis token
 IP1_TOKEN = "" # See https://docs.ipdata.co/
 IP2_TOKEN = "" # See https://ipinfo.io/developers
+YANDEX_API_KEY = ""
