--- a/composer.json
+++ b/composer.json
@@ -2,18 +2,12 @@
     "name": "mateodioev/alchemist-ace",
     "description": "Alchemist es una librería para el desarrollo de bots en telegram, soporta inline querys(si el bot lo tiene activado), mensajes normales, y calbacks.",
     "type": "library",
-    "keywords": [
-        "telegram",
-        "bot",
-        "inline",
-        "query",
-        "callback"
-    ],
+    "keywords": ["telegram", "bot", "inline", "query", "callback", "alchemist", "alchemist-ace"],
     "license": "MIT",
     
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "Mateodioev\\Alchemist\\": "src/"
         },
         "files": [
             "src/helpers.php"
